feature: add hack nerd font

--- a/packages/system/fonts.conf
+++ b/packages/system/fonts.conf
@@ -4,6 +4,7 @@ PACKAGES=(
     "noto-fonts-cjk"
     "noto-fonts-emoji"
     "ttf-dejavu"
+    "ttf-hack-nerd"
     "ttf-jetbrains-mono"
     "ttf-ubuntu-font-family"
     "gnu-free-fonts"
