feature: add dolphin dependencies

--- a/packages/apps/dolphin.conf
+++ b/packages/apps/dolphin.conf
@@ -5,4 +5,10 @@ PACKAGES=(
 DEPENDENCIES=(
     "ffmpegthumbs"
     "kdegraphics-thumbnailers"
+    "avahi"
+    "dbus"
+    "smbclient"
+    "kio5"
+    "kio-extras"
+    "kio-fuse"
 )
